--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="row main-row">
         <div class="col-lg-3 col-md-12 col-sm-12 main-data">
           <div class="card" id="facebook-main">
-            <p class="username"> <img src="images/icon-facebook.svg" alt="Facebook"> @nathanf</p>
+            <p class="username"> <img src="icon-facebook.svg" alt="Facebook"> @nathanf</p>
             <h1>1987</h1>
             <p class="followers">FOLLOWERS</p>
             <p class="daily-users">12 Today</p>
