change Images address

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
   <title>Frontend Mentor | [Challenge Name Here]</title>
 </head>
@@ -73,7 +73,7 @@
 
         <div class="col-lg-3 col-md-12 main-data">
           <div class="card" id="twitter-main">
-            <p class="username"> <img src="images/icon-twitter.svg" alt="Twitter"> @nathanf</p>
+            <p class="username"> <img src="icon-twitter.svg" alt="Twitter"> @nathanf</p>
             <h1>1044</h1>
             <p class="followers">FOLLOWERS</p>
             <p class="daily-users">99 Today</p>
@@ -82,7 +82,7 @@
         <div class="col-lg-3 col-md-12 main-data">
           <div class="instagram-card">
             <div class="card" id="instagram-main">
-              <p class="username"><img src="images/icon-instagram.svg" alt="Instagram"> @nathanf</p>
+              <p class="username"><img src="icon-instagram.svg" alt="Instagram"> @nathanf</p>
               <h1>11k</h1>
               <p class="followers">FOLLOWERS</p>
               <p class="daily-users">1099 Today</p>
@@ -92,7 +92,7 @@
 
         <div class="col-lg-3 col-md-12 main-data">
           <div class="card" id="youtube-main">
-            <p class="username"><img src="images/icon-youtube.svg" alt="youtube"> Nathan F.</p>
+            <p class="username"><img src="icon-youtube.svg" alt="youtube"> Nathan F.</p>
             <h1>8239</h1>
             <p class="followers">SUBSCRIBERS</p>
             <p class="daily-users">-144 Today</p>
@@ -113,7 +113,7 @@
           <div class="card-header">
             <div class="row overview-row">
               <p>Page Views</p>
-              <img src="images/icon-facebook.svg" alt="Facebook">
+              <img src="icon-facebook.svg" alt="Facebook">
             </div>
           </div>
           <div class="card-footer">
@@ -129,7 +129,7 @@
           <div class="card-header">
             <div class="row overview-row">
               <p>Likes</p>
-              <img src="images/icon-facebook.svg" alt="Facebook">
+              <img src="icon-facebook.svg" alt="Facebook">
             </div>
           </div>
           <div class="card-footer">
@@ -144,7 +144,7 @@
           <div class="card-header">
             <div class="row overview-row">
               <p>Likes</p>
-              <img src="images/icon-instagram.svg" alt="Instagram">
+              <img src="icon-instagram.svg" alt="Instagram">
             </div>
           </div>
           <div class="card-footer">
@@ -159,7 +159,7 @@
           <div class="card-header">
             <div class="row overview-row">
               <p>Profile Views</p>
-              <img src="images/icon-instagram.svg" alt="Instagram">
+              <img src="icon-instagram.svg" alt="Instagram">
             </div>
           </div>
           <div class="card-footer">
@@ -176,7 +176,7 @@
           <div class="card-header">
             <div class="row overview-row">
               <p>Retweets</p>
-              <img src="images/icon-twitter.svg" alt="Twitter">
+              <img src="icon-twitter.svg" alt="Twitter">
             </div>
           </div>
           <div class="card-footer">
@@ -191,7 +191,7 @@
           <div class="card-header">
             <div class="row overview-row">
               <p>Likes</p>
-              <img src="images/icon-twitter.svg" alt="Twitter">
+              <img src="icon-twitter.svg" alt="Twitter">
             </div>
           </div>
           <div class="card-footer">
@@ -206,7 +206,7 @@
           <div class="card-header">
             <div class="row overview-row">
               <p>Likes</p>
-              <img src="images/icon-youtube.svg" alt="">
+              <img src="icon-youtube.svg" alt="">
             </div>
           </div>
           <div class="card-footer">
@@ -221,7 +221,7 @@
           <div class="card-header">
             <div class="row overview-row">
               <p>Total views</p>
-              <img src="images/icon-youtube.svg" alt="">
+              <img src="icon-youtube.svg" alt="">
             </div>
           </div>
           <div class="card-footer">
